welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:6: error: not found: value l
  l?veBrosse();
  ^PictureMono1:6: error: not found: value veBrosse
  l?veBrosse();
    ^